--- a/style.css
+++ b/style.css
@@ -17,33 +17,35 @@
 
 
 .links{
+    display: flex;
+    padding: 10px 0;
     order: 1;
-    display: block;
     color: #f9faf8;
+    float: right;
+    margin-right: 20px;
+    gap: 20px;
+    font-size: large;
+
     
     
 }
-    
+.links a{
+    color: #f9faf8;
+   
+} 
 
   
  img{
-    float: right;
-    max-width: 25%;
-    max-height: 25%;
-    padding-top: 80px;
-    padding-right:40px;
+    order: 1;
     padding-bottom: 20px;
+    width: 600px;
+    height: 200px;
+    align-self: last baseline;
+    padding-right: 60px;
     
     
  }
  
- p{
-    font-size: xx-large ;
-    padding-right:20px;
-    padding-top: 10%;
-    float: right;
-    text-align: left;
- }
     
  header{
     
@@ -54,10 +56,10 @@
 
 
 h1{
-    font-size: 48px;
+    font-size: 38px;
     font-weight: bolder;
     color: #f9faf8;
-    text-align: center;
+    text-align:left;
     padding-left: 50px;
     
    
@@ -67,8 +69,8 @@ h1{
 
 .paragraph{
     color: #f9faf8;
-    text-align:center;
-    font-size: 28px;
+    text-align:justify;
+    font-size: 20px;
     padding-top: 200px;
 }
 
@@ -82,12 +84,10 @@ button{
     height:40px;
     align-self:center;
     margin-left: 100px;
-
+    margin-bottom: 20px;
     
-
-
-
 }
+
 }
 
     
@@ -110,29 +110,16 @@ h2{
 }
 
 .imageContainer{
-    display: inline-block;
-    position: relative;
-    justify-content: space-around;
-    align-items: center;
-    width: fit-content;
-}
-
-img .covers{
-
-    display: block;
+    display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.coverinfo{
-    font-size:xx-large;
-    color:black;
-    text-align: center;
-
+    gap: 25px;
+    margin-bottom: 20px;
 }
 
 
 }
+
 
 .flex-container .three{
     padding-top: 100px;
